# pyrefcount

./: .copier-answers.yml  .envrc  .gitignore  .readthedocs.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README.rst  appveyor.yml  duties.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  run_tests.py  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
.github/workflows/: build-matrix.yml  ci.yml  macos-build.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_077f4f0b72468afb_base_py.html  z_077f4f0b72468afb_debug_py.html  z_077f4f0b72468afb_interop_py.html  z_077f4f0b72468afb_putils_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_boilerplate_py.html  z_a44f0ac069e85531_test_native_handle_py.html  z_a44f0ac069e85531_test_putils_py.html
credits/: index.html
doc/: tech_notes.md
docs/: base-module.md  code-reference.md  environment.yml  index.md  interop-module.md  putils-module.md  readme  requirements.txt  sandpit.md  tech_notes.md  usage-and-applications.md
docs/.overrides/partials/: comments.html
docs/uml/: refcount-principles.wsd
license/: index.html
refcount/: __init__.py  _version.py  base.py  interop.py  putils.py
reference/SUMMARY/: index.html
reference/refcount/: index.html
reference/refcount/base/: index.html
reference/refcount/debug/: index.html
reference/refcount/interop/: index.html
reference/refcount/putils/: index.html
scripts/: gen_credits.py  get_version.py
search/: search_index.json
src/refcount/: __init__.py  base.py  debug.py  interop.py  putils.py
tech_notes/: index.html
tests/: Readme.md  __init__.py  test_boilerplate.py  test_native_handle.py  test_putils.py
tests/test_native_library/: cmake instructions.txt  cmake_instructions.md  test_native_library.cpp  test_native_library.h  test_native_library.sln  test_native_library.vcxproj  test_structs.cpp  test_structs.h
usage-and-applications/: index.html
