[tool.poetry]
name = "refcount"
version = "1.0.0"
description = "Python classes for reference counting"
authors = ["J-M <jean-michel.perraud@csiro.au>"]
license = "LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.11.5"

[tool.poetry.dev-dependencies]
# autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
python-semantic-release = "^7.29.7"
mypy = "^0.971"
mkdocs = "^1.3.0"
mkdocs-autorefs = "^0.4.1"
# mkdocs-jupyter = "^0.21.0"
# mkdocs-material = "^8.3.9"
# mkdocs-material-extensions = "^1.0.3"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
# jupyterlab = "^3.4.5"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                           # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = false                   # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
